--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,9 @@ version = "0.0.0"
 edition = "2021"
 
 [dependencies]
+either = "1.11.0"
+futures = "0.3.30"
+roxmltree = "0.19.0"
+tokio = { version = "1.37.0", features = ["rt-multi-thread", "io-std", "fs", "macros", "sync"] }
+walkdir = "2.5.0"
+zip = "1.1.2"
